# mlir-resnet

./: .gitignore  CMakeLists.txt  README.md
doc/: PatternRewrite.md
include/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.td  Passes.h  Rewrite.td  ShapeInfer.h  ShapeInfer.td
python/: CMakeLists.txt
python/Onnx/: README.md  onnxdefine.py  onnxgen.py  onnxparse.py  resnet18.py
python/dialects/: EX.py  EX.td
src/: Conversion.cpp  Dialect.cpp  Ops.cpp  Rewrite.cpp  ShapeInferPass.cpp
test/: example.cpp  read.cpp
